k8s-manifests/02-db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  clusterIP: None
  ports:
  - port: 5432
  selector:
    app: chat-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: chat-db
  template:
    metadata:
      labels:
        app: chat-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init-script
        configMap:
          name: db-init-script
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
